syntax = "proto3";

package b2b.erp.reconciliation;
option java_multiple_files = true;
option java_package = "com.usoft.b2b.external.erp.reconciliation.api.entity";

// 应收对账单
message PurchaseApCheck {
    int64 ac_b2bid = 1; // b2bid
	int64 ac_fromdate = 2; // 对账起始日期(时间戳)
    int64 ac_todate = 3; // 对账截止日期(时间戳)
	int64 ac_recorddate = 4; // 录单日期(时间戳)
    string ac_recorder = 5;//录单人
	int64 ac_apdate = 6; // 应付日期(时间戳)
    string ac_checkstatus = 7;//对账状态
    string ac_remark = 8;// 备注
    int64 ac_commitdate = 9;//提交日期(时间戳)  #
	int32 ac_status = 10;//上传状态 #
    double ac_checkamount = 11; // 对账金额
    string ac_currency = 12; // 币别
    double ac_rate = 13; // 汇率
	string ac_paymentname = 14; // 收款方式
    int64 ac_custuu = 15;//客户UU #
    int64 ac_enuu = 16;//供应商UU  #
    string ac_code = 17; // 单据编号  
	string ac_confirmstatus = 18;//客户回复状态 #
    string ac_reason = 19;//回复平台原因
    // 应收对账单明细
    message  APCheckDetail {
        int32 ad_detno = 1; // 明细行号
	    int64 ad_prid = 2;// 客户物料ID #
        string ad_inoutno = 3; // 客户出入库单号
	    string ad_orderclass = 4; // 客户出入库类型 #
        int64 ad_orderdetno = 5; // 客户出入库序号 #
	    double ad_price = 6; // 单价
        double ad_b2bqty = 7; // 对账数量
	    double ad_b2bamount = 8; // 本次对账金额
        double ad_custcheckqty = 9; // 客户确认数量 #
	    string ad_remark = 10; // 备注
        int64 ad_id = 11;// id
	    int64 ad_apid = 12; // 关联Id
        int32 ad_status = 13; // 对账状态 #
    }
}
